<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RaveCheckout">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="900dp">


            <Button
                    android:text="@string/make_payment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnRavePay" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/txtEmail"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txtAmount" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:drawable/editbox_background" android:padding="8dp"/>
            <TextView
                    android:text="@string/first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtFName" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtFName" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:drawable/editbox_background" android:padding="8dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtLName" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:drawable/editbox_background" android:padding="8dp"/>
            <TextView
                    android:text="@string/amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtLName" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/email_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtAmount" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/txtEmail" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:padding="8dp"
                    android:background="@android:drawable/editbox_background"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>