<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PaystackCheckout">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/creditcard"
                    android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.333"
                    android:contentDescription="card"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="59dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
                    android:id="@+id/linearLayout">

                <ImageView
                        android:layout_width="132dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/master_card_logo_svg"
                        android:id="@+id/imageView2"/>

                <ImageView
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/visa_logo_new"
                        android:id="@+id/imageView4"
                        android:layout_weight="1"/>

                <ImageView
                        android:layout_width="131dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/verve"
                        android:id="@+id/imageView3"
                        android:layout_weight="1"/>
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="415dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

                <TextView
                        android:text="@string/name_on_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.026"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/txtCardName" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@android:drawable/editbox_background_normal" android:padding="8dp"/>
                <TextView
                        android:text="@string/card_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/txtCardName"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/txtCardNumber" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:background="@android:drawable/editbox_background_normal" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:padding="8dp" android:maxLength="19"
                        android:inputType="number"/>
                <TextView
                        android:text="@string/expiry_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtCardNumber"
                />
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/txtExpiryDate" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        android:background="@android:drawable/editbox_background_normal"
                        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:padding="8dp" android:maxLength="5" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/txtCvv" app:layout_constraintHorizontal_bias="0.0"/>
                <TextView
                        android:text="@string/cvv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/txtCardNumber"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="164dp"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/txtCvv"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        android:background="@android:drawable/editbox_background_normal"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView7"
                        android:padding="8dp"/>
                <Button
                        android:text="@string/make_payment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnRavePay" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/txtExpiryDate" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"/>
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>